--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,10 +14,14 @@ Depends:
 Imports:
   shiny,
   shinyWidgets,
+  shinythemes,
+  testthat,
   usethis,
   dplyr
 RoxygenNote: 7.2.3
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
+Config/testthat/edition: 3
